# wfc

./: .gitignore  README.md  pyproject.toml
src/wfc/: wfc.py
tests/: test_wfc.py
